[gd_scene load_steps=6 format=2]

[ext_resource path="res://Personatge.tscn" type="PackedScene" id=1]
[ext_resource path="res://Joc_complet.gd" type="Script" id=2]
[ext_resource path="res://Menu_inici.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asteroides.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.000180244, -0.0131778, 0, 0, 0, 0, 639.992, 0, 0, 0, 0, 0, -0.0078125, 960, 0, 0, 0, 0, -0.000180244, -0.0131778 )
}

[node name="Joc_complet" type="Node"]
script = ExtResource( 2 )
Asteroides = ExtResource( 4 )

[node name="Personatge" parent="." instance=ExtResource( 1 )]
position = Vector2( 192.217, 165.52 )

[node name="Timer_asteroide" type="Timer" parent="."]
wait_time = 0.5

[node name="Score_timer" type="Timer" parent="."]

[node name="Timer_inici" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Posicio_inicial" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -0.000180244, -0.0131778 )
rotation = 2.05899e-05

[node name="Menu_inici" parent="." instance=ExtResource( 3 )]
[connection signal="contacte" from="Personatge" to="." method="game_over"]
[connection signal="timeout" from="Timer_asteroide" to="." method="_on_Timer_asteroide_timeout"]
[connection signal="timeout" from="Score_timer" to="." method="_on_Score_timer_timeout"]
[connection signal="timeout" from="Timer_inici" to="." method="_on_Timer_inici_timeout"]
[connection signal="iniciar_joc" from="Menu_inici" to="." method="nova_partida"]
